--- a/index.html
+++ b/index.html
@@ -82,5 +82,67 @@
    
     </div>
     <!--end home-->
+    <!--start cards-->
+    <div class="title" >
+      <div class="container"> 
+        <h1><span>N</span>EW  ARRI<span>V</span>ALS</h1>
+    </div>
+  </div>
+  
+  
+
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-4 content">
+        <div class="card" style="width: 18rem; border: none;">
+          <img src="images/Rectangle 20.png" class="card-img-top" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Hoodies & Sweetshirt</h5>
+            <div class="more">
+            <p class="card-text">Explore Now!</p>
+            <div class="orange">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+      </div>
+    
+
+      <div class="col-4 temm">
+        <div class="card" style="width: 18rem; border: none;">
+          <img src="images/Rectangle 21.png" class="card-img-top" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Coats & Parkas</h5>
+            <div class="more">
+            <p class="card-text">Explore Now!</p>
+           <div class="purple">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+      </div>
+   
+      <div class="col-4 ded">
+        <div class="card" style="width: 18rem; border: none;">
+          <img src="images/Rectangle 22.png" class="card-img-top" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Tees & T-Shirt</h5>
+            <div class="more">
+            <p class="card-text">Explore Now!</p>
+            <div class="blue">
+            <i class="fa-solid fa-arrow-right"></i>
+          </div>
+        </div>
+        </div>
+    </div>
+      </div>
+
+    </div>
+  </div>
+    <!--end cards-->
+    <!---->
+    <!---->
     </body>
 </head>
