add section payday

--- a/index.html
+++ b/index.html
@@ -142,7 +142,56 @@
     </div>
   </div>
     <!--end cards-->
-    <!---->
-    <!---->
+    <!--start payday-->
+ 
+
+   
+   
+ 
+    <div class="mena container">
+      <div class="row">
+        <div class="col-6">
+          <div class="photo">
+            <img src="images/image 12.png" alt="">
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="pay">
+            <h1>
+              <span>
+                PAYDAY
+              </span>
+              <br />
+              SALE NOW
+              <br />
+            </h1>
+            <p>
+              Spend minimal $100 get 30% off
+              <br />
+              voucher code for your next purchase
+              <br />
+              <span>
+                1 June - 10 June 2021
+                <br />
+              </span>
+              *Terms & Conditions apply
+            </p>
+            <div class="button">
+              <button type="button" class="btn btn-main">Shop Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!--end payday-->
     </body>
 </head>
