--- a/index.html
+++ b/index.html
@@ -143,11 +143,6 @@
   </div>
     <!--end cards-->
     <!--start payday-->
- 
-
-   
-   
- 
     <div class="mena container">
       <div class="row">
         <div class="col-6">
@@ -183,15 +178,48 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
     <!--end payday-->
+    <!--start Young’s Favourite-->
+    <div class="title-section" >
+      <div class="container"> 
+        <h1><span>Y</span>oung  <span>’</span>S <span>F</span>avourite</h1>
+    </div>
+  </div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-md-6 vnvn">
+        <div class="card-vnvn">
+          <img src="images/Rectangle 49.png" class="card-img-top" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Trending on instagram </h5>
+            <div class="more">
+              <p class="card-text">Explore Now!</p>
+              <div class="vnvn-color">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="col-md-6 vana">
+        <div class="card-vnvn">
+          <img src="images/Rectangle 50.png" class="card-img-top" alt="">
+          <div class="card-body">
+            <h5 class="card-title">All Under $40 </h5>
+            <div class="more">
+              <p class="card-text">Explore Now!</p>
+              <div class="vana-color">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    <!--end Young’s Favourite-->
+
+    
     </body>
 </head>
