--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
                 CLOTHES.
                 <br />
               </h1>
-              <p>Live for Influential and Innovative fashion!</p>
-              <button type="button" class="btn btn-main">Shop Now</button>
+              <div class="description">
+                <p>Live for Influential and Innovative fashion!</p>
+                <button type="button" class="btn btn-main">Shop Now</button>
+              </div>
             </div>
             <div class="col-6">
               <img class="home-image"
@@ -92,12 +94,10 @@
         </div>
       </div>
 
-
-
       <div class="container text-center">
         <div class="row">
-          <div class="col-4 content">
-            <div class="card" style="width: 20rem; border: none;">
+          <div class="col-md-4 mb-4">
+            <div class="card" style="border: none;">
               <img src="images/Rectangle 20.png" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title">Hoodies & Sweetshirt</h5>
@@ -111,9 +111,8 @@
             </div>
           </div>
 
-
-          <div class="col-4 temm">
-            <div class="card" style="width: 20rem; border: none;">
+          <div class="col-md-4 mb-4">
+            <div class="card" style="border: none;">
               <img src="images/Rectangle 21.png" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title">Coats & Parkas</h5>
@@ -127,8 +126,8 @@
             </div>
           </div>
 
-          <div class="col-4 ded">
-            <div class="card" style="width: 20rem; border: none;">
+          <div class="col-md-4 mb-4">
+            <div class="card" style="border: none;">
               <img src="images/Rectangle 22.png" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title">Tees & T-Shirt</h5>
@@ -141,24 +140,22 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
       <!--end cards-->
+
       <!--start payday-->
-      <div class="mena container">
+      <div class="mena-container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-md-6">
             <div class="photo">
-              <img src="images/image 12.png" alt="">
+              <img src="images/image 12.png" class="img-fluid" alt="">
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-md-6">
             <div class="pay">
               <h1>
-                <span>
-                  PAYDAY
-                </span>
+                <span>PAYDAY</span>
                 <br />
                 SALE NOW
                 <br />
@@ -182,19 +179,22 @@
         </div>
       </div>
       <!--end payday-->
+
       <!--start Young’s Favourite-->
       <div class="title-section">
         <div class="container">
           <h1><span>Y</span>oung <span>’</span>S <span>F</span>avourite</h1>
         </div>
       </div>
+
       <div class="container text-center">
         <div class="row">
-          <div class="col-md-6 vnvn">
+          <!-- First Card: Trending on Instagram -->
+          <div class="col-md-6 mb-4">
             <div class="card-vnvn">
-              <img src="images/Rectangle 49.png" class="card-img-top" alt="">
+              <img src="images/Rectangle 49.png" class="card-img-top" alt="Trending on Instagram">
               <div class="card-body">
-                <h5 class="card-title">Trending on instagram </h5>
+                <h5 class="card-title">Trending on Instagram</h5>
                 <div class="more">
                   <p class="card-text">Explore Now!</p>
                   <div class="vnvn-color">
@@ -205,14 +205,15 @@
             </div>
           </div>
 
-          <div class="col-md-6 vana">
+          <!-- Second Card: All Under $40 -->
+          <div class="col-md-6 mb-4">
             <div class="card-vnvn">
-              <img src="images/Rectangle 50.png" class="card-img-top" alt="">
+              <img src="images/Rectangle 50.png" class="card-img-top" alt="All Under $40">
               <div class="card-body">
-                <h5 class="card-title">All Under $40 </h5>
+                <h5 class="card-title">All Under $40</h5>
                 <div class="more">
                   <p class="card-text">Explore Now!</p>
-                  <div class="vana-color">
+                  <div class="vnvn-color">
                     <i class="fa-solid fa-arrow-right"></i>
                   </div>
                 </div>
@@ -221,8 +222,10 @@
           </div>
         </div>
       </div>
+
       <!--end Young’s Favourite-->
-      <!--start download-->
+
+      <!-- start download-->
       <section class="download">
         <div class="container">
           <div class="row">
@@ -240,17 +243,16 @@
               </div>
             </div>
             <div class="col-md-6 download-content download-image">
-              <img class="download-mobile" src="images/Mobile app (1).png" alt="">
+              <img class="download-mobile" src="images/Mobile app (1).png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
       </section>
       <!--end download-->
-      <!--end Young’s Favourite-->
 
       <!--start footer-->
       <section class="footer">
-        <div class="container  ">
+        <div class="container">
           <div class="row">
             <div class="col-md-3 footer-content">
               <h1>FASHION</h1>
@@ -278,12 +280,15 @@
               <h4> Legal</h4>
               <h6> Terms & Conditions</h6>
               <h6> Privacy Policy</h6>
-
             </div>
           </div>
         </div>
       </section>
       <!--end footer -->
 
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-O3qqF0ykF2CVJAY6UlULHgTFRCpI0/3dMjRJ/l1Yl4wZQO1beYmA94yC92JFOlfA"
+        crossorigin="anonymous"></script>
     </body>
-  </head>
+
+    </html>
