--- a/index.html
+++ b/index.html
@@ -20,63 +20,53 @@
 
     <body>
       <!--start navbar-->
-      <nav id="f" class="navbar">
+      <nav id="f" class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid container">
-          <a class="navbar-brand" href="#">
-            <div class="content">
-              <img src="images/Vector.png" alt="Logo" width="30" height="24" class="d-inline-block">
-              <span>F</span>ASH<span>I</span>ON
-            </div>
+          <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="images/Vector.png" alt="Logo" width="30" height="24" class="d-inline-block me-2">
+            <span class="content"><span>F</span>ASH<span>I</span>ON</span>
           </a>
-          <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="#">CATALOGUE</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">FASHION</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">FAVOURITE</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">LIFESTYLE</a>
-                </li>
-                <li class="nav-item temm">
-                  <a class="nav-link" href="#">SIGN UP</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">CATALOGUE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">FASHION</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">FAVOURITE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">LIFESTYLE</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link temm" href="#">SIGN UP</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
+
       <!--end navbar-->
       <!--start home-->
       <div class="home">
         <div class="container">
-          <div class="row">
-            <div class="col-6 content">
+          <div class="row align-items-center justify-content-center d-flex home-content">
+            <div class="col-md-6 content">
               <h1>
-                LET’S
-                <br />
-                EXPLORE
-                <br />
-                <span>UNIQUE</span>
-                <br />
-                CLOTHES.
-                <br />
+                LET’S EXPLORE <span>UNIQUE</span> CLOTHES.
               </h1>
               <div class="description">
                 <p>Live for Influential and Innovative fashion!</p>
                 <button type="button" class="btn btn-main">Shop Now</button>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6">
               <img class="home-image"
                 src="images/incendiary-fantastically-beautiful-girl-coat-eco-fur-moves-fun-picture-lovely-lady-pink-clothes-removebg-preview 1.png">
             </div>
@@ -145,14 +135,14 @@
       <!--end cards-->
 
       <!--start payday-->
-      <div class="mena-container">
+      <div class="pay-container container">
         <div class="row">
           <div class="col-md-6">
             <div class="photo">
               <img src="images/image 12.png" class="img-fluid" alt="">
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 align-items-center justify-content-center d-flex home-content">
             <div class="pay">
               <h1>
                 <span>PAYDAY</span>
@@ -191,13 +181,13 @@
         <div class="row">
           <!-- First Card: Trending on Instagram -->
           <div class="col-md-6 mb-4">
-            <div class="card-vnvn">
+            <div class="card-Trending">
               <img src="images/Rectangle 49.png" class="card-img-top" alt="Trending on Instagram">
               <div class="card-body">
                 <h5 class="card-title">Trending on Instagram</h5>
                 <div class="more">
                   <p class="card-text">Explore Now!</p>
-                  <div class="vnvn-color">
+                  <div class="Trending-color">
                     <i class="fa-solid fa-arrow-right"></i>
                   </div>
                 </div>
@@ -207,13 +197,13 @@
 
           <!-- Second Card: All Under $40 -->
           <div class="col-md-6 mb-4">
-            <div class="card-vnvn">
+            <div class="card-Trending">
               <img src="images/Rectangle 50.png" class="card-img-top" alt="All Under $40">
               <div class="card-body">
                 <h5 class="card-title">All Under $40</h5>
                 <div class="more">
                   <p class="card-text">Explore Now!</p>
-                  <div class="vnvn-color">
+                  <div class="Trending-color">
                     <i class="fa-solid fa-arrow-right"></i>
                   </div>
                 </div>
@@ -285,10 +275,10 @@
         </div>
       </section>
       <!--end footer -->
-
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-O3qqF0ykF2CVJAY6UlULHgTFRCpI0/3dMjRJ/l1Yl4wZQO1beYmA94yC92JFOlfA"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
     </body>
 
     </html>
